--- a/electric-bike-ratings/DA_ML_CLASSIFICATION-1.ipynb
+++ b/electric-bike-ratings/DA_ML_CLASSIFICATION-1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 211,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 212,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -47,31 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 238,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1mRows: \u001b[22m\u001b[34m1500\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m8\u001b[39m\n",
-      "\u001b[36m--\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m--------------------------------------------------------\u001b[39m\n",
-      "\u001b[1mDelimiter:\u001b[22m \",\"\n",
-      "\u001b[31mchr\u001b[39m (6): make_model, review_month, web_browser, reviewer_age, primary_use, v...\n",
-      "\u001b[32mdbl\u001b[39m (2): owned, overall_rating\n",
-      "\n",
-      "\u001b[36mi\u001b[39m Use `spec()` to retrieve the full column specification for this data.\n",
-      "\u001b[36mi\u001b[39m Specify the column types or set `show_col_types = FALSE` to quiet this message.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# loading data\n",
-    "df <- read_csv('electric_bike_ratings_2212.csv')"
+    "df <- read_csv('electric_bike_ratings_2212.csv', show_col_types = FALSE)"
    ]
   },
   {
@@ -83,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 214,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -165,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 215,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -246,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 216,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -290,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 217,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -331,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 218,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -390,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 219,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -479,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 220,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -518,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 221,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -627,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 222,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -691,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 223,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -790,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 224,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -828,14 +813,6 @@
       "[1] \"There is no NA values\"\n",
       "[1] \"There is no NA values\"\n"
      ]
-    },
-    {
-     "ename": "ERROR",
-     "evalue": "Error in list(owned = levels(df$owned), models = levels(df$make_model), : argument 6 jest pusty\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in list(owned = levels(df$owned), models = levels(df$make_model), : argument 6 jest pusty\nTraceback:\n"
-     ]
     }
    ],
    "source": [
@@ -846,15 +823,7 @@
     "} else{\n",
     "\t  print('There is no NA values')\n",
     "  }\n",
-    "}\n",
-    "\n",
-    "list(\n",
-    "\t\"owned\" = levels(df$owned),\n",
-    "\t\"models\" = levels(df$make_model),\n",
-    "\t\"months\" = levels(df$review_month),\n",
-    "\t\"web_browser\" = levels(df$web_browser),\n",
-    "\t\"use\" = levels(df$primary_use),\n",
-    ")\n"
+    "}\n"
    ]
   },
   {
@@ -866,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 225,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -967,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 226,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1049,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 227,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1108,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 228,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1166,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 229,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1222,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 230,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1263,13 +1232,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 231,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1328,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 232,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1411,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 233,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1467,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 234,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1511,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 235,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1563,13 +1527,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 236,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   pred_rf\n",
+       "      0   1\n",
+       "  0  91  92\n",
+       "  1  33 234"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Accuracy = 0.722222222222222\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Make predictions on the testing set\n",
+    "pred_rf <- predict(model_rf, newdata = test_rf, type = \"response\")\n",
+    "\n",
+    "accuracy_rf <- mean(pred_rf == test_rf$owned)\n",
+    "\n",
+    "# Evaluating model accuracy\n",
+    "# using confusion matrix\n",
+    "table(test_rf$owned, pred_rf)\n",
+    "accuracy_rf <- mean(pred_rf == test_rf$owned)\n",
+    "\n",
+    " print(paste('Accuracy =', accuracy_rf))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Confusion Matrix and Statistics\n",
+       "\n",
+       "        \n",
+       "pred_glm   0   1\n",
+       "       0  92  28\n",
+       "       1  91 239\n",
+       "                                          \n",
+       "               Accuracy : 0.7356          \n",
+       "                 95% CI : (0.6922, 0.7758)\n",
+       "    No Information Rate : 0.5933          \n",
+       "    P-Value [Acc > NIR] : 1.991e-10       \n",
+       "                                          \n",
+       "                  Kappa : 0.4206          \n",
+       "                                          \n",
+       " Mcnemar's Test P-Value : 1.319e-08       \n",
+       "                                          \n",
+       "            Sensitivity : 0.8951          \n",
+       "            Specificity : 0.5027          \n",
+       "         Pos Pred Value : 0.7242          \n",
+       "         Neg Pred Value : 0.7667          \n",
+       "             Prevalence : 0.5933          \n",
+       "         Detection Rate : 0.5311          \n",
+       "   Detection Prevalence : 0.7333          \n",
+       "      Balanced Accuracy : 0.6989          \n",
+       "                                          \n",
+       "       'Positive' Class : 1               \n",
+       "                                          "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Logistic model\n",
     "cm1 <- confusionMatrix(table(pred_glm, test$owned), positive = \"1\")\n",
