--- a/electric-bike-ratings/DA_ML_CLASSIFICATION-1.ipynb
+++ b/electric-bike-ratings/DA_ML_CLASSIFICATION-1.ipynb
@@ -1512,7 +1512,7 @@
     }
    ],
    "source": [
-    "# # Split the data into training and testing sets\n",
+    "# Split the data into training and testing sets\n",
     "set.seed(123)\n",
     "sample_rf <- sample.split(df$owned, SplitRatio = 0.7)\n",
     "train_rf <- subset(df, sample_rf== TRUE)\n",
