--- a/electric-bike-ratings/DA_ML_CLASSIFICATION-1.ipynb
+++ b/electric-bike-ratings/DA_ML_CLASSIFICATION-1.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "LOREM IPSUM"
+    "The business wants to predict whether a review came from an owner or not using the data provided."
    ]
   },
   {
